fix vertical alignment of cancel button
[#161129611]

--- a/src/shared/PreApprovalRequest/PreApprovalRequest.css
+++ b/src/shared/PreApprovalRequest/PreApprovalRequest.css
@@ -1,4 +1,3 @@
-
 /*PreApproval Table styles*/
 .accessorial-panel {
   border-width: 3px;
@@ -43,6 +42,9 @@
   width: 9%;
 }
 
+.cancel-link {
+  padding: 1em;
+}
 .accessorial-panel th,
 .accessorial-panel td {
   border: none;
@@ -119,7 +121,7 @@
 }
 
 .bq-explanation {
-  font-size: .8em;
+  font-size: 0.8em;
   padding: 0rem 0rem 3rem 0rem;
 }
 
@@ -132,6 +134,3 @@
   line-height: 1.5em;
   margin: 0rem 0rem 0rem 0rem;
 }
-
-
-
